# Codes

./: .gitignore
Chapter_10/: stack.cpp  stack.h  stock20.h
Chapter_11/: stone1.cpp
Chapter_12/: sayings2.cpp
Chapter_13/: CMakeLists.txt
Chapter_15/: CMakeLists.txt
Classes_02/: main.cpp  vector.cpp  vector.h
Classes_02/Lec05/: MITPerson.h  main.cc
L07_Advanced_Pointers/: L07_Advanced_Pointers.kdev4  main.cpp
L07_Advanced_Pointers/.kdev4/: L07_Advanced_Pointers.kdev4
L07_Dynamic/: CMakeLists.txt  L07_Dynamic.kdev4
L07_Dynamic/.kdev4/: L07_Dynamic.kdev4
L08_Misc_Functions/: main.cpp
MidTermReview/: arrfun4.cpp  vegnewsSTR_GOOD.cpp
ReviewPlayground/: main.cpp
Sep8_inclass/: .main.cpp.kate-swp  main.cpp
Sep8_inclass/.kdev4/: Sep8_inclass.kdev4
codes/C++/FinalProject/: Array.cpp  Array.h  CMakeLists.txt  Game.cpp  Game.h  README.txt  WIN.cpp  WIN.h  exception.h  main.cpp
codes/C++/HW02/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
codes/C++/HW03/: CMakeLists.txt  book.cpp  book.h  list.cpp  list.h  loadfile.cpp  loadfile.h  main.cpp
codes/C++/HW03/data/: test_subset1.tsv
codes/HTML:PHP:JAVASCRIPT/: About.html  Contact.html  Query.html  heatmap.php  index1.html  result.php  searchGeneName.php  searchGenomeRegion.php  style.css
codes/R/: ConsensusClustering.R  Ftest.R  MultiCorrection.r  edgeR.r  getCountsAfter.R  runSPP.R
codes/perl/: CancelJobs.pl  CheckOverlap.pl  CreatingJobs.pl  HypergeometricInput.pl  SignificantMotifs.pl  bedtowig.pl  confident_transcript.pl  coverage.pl  expMatrix.pl  status.pl
codes/python/: Count_files.py  Gen_Sh.py  Summary_cuff.py  combineAll.py  getCountMatrix.py  getSigFandT.py  image.py  test.py
codes/shell scripts/: coverage.sh  run_PreHSC.sh  run_cc_bundle.sh  submit_3.sh  submit_cuff_1L17-.sh
