cmake_minimum_required(VERSION 2.6)
project(Chapter_15)

set(CMAKE_CXX_STANDARD 14)                                                                                                                                               
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable( )

add_executable( ) 	#Not going to be covered on the exam
