{\rtf1\ansi\ansicpg1252\cocoartf1504
{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
{\colortbl;\red255\green255\blue255;}
{\*\expandedcolortbl;\csgray\c100000;}
\margl1440\margr1440\vieww10800\viewh8400\viewkind0
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0

\f0\fs24 \cf0 cmake_minimum_required(VERSION 2.6)\
project(FinalProject1)\
\
set(CMAKE_CXX_STANDARD 14)                                                                                                                                               \
set(CMAKE_CXX_STANDARD_REQUIRED ON)\
\
add_executable(FinalProject main.cpp Array.cpp Game.cpp WIN.cpp)\
\
\
}